--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@ header{
     border: 1px dashed blue;
 }
 main{
-    height: 1000px;
+    min-height: 1000px;
     border: 1px dashed darkcyan;
 }
 footer{
